octsympy 2.4.0-dev
==================

  * New commands:

          acsc
          asec
          asech
          besseljn
          besselyn
          cat
          cosint
          coshint
          csch
          dilog
          ei
          expint
          fresnelc
          fresnels
          gammainc
          gammaln
          hypergeom
          igamma
          jordan
          laguerreL
          lgamma
          logint
          polylog
          psi
          sech
          sinint
          sinhint
          ssinint

  * Move some functions from the specfun package.  So now the Symbolic
    package hosts some numerical implementations as well:

          dirac
          heaviside
          laguerreL
          lambertw

  * Re-implement @double/laguerreL for numerical stability.

  * Add spherical Bessel functions: these are called `besseljn` and
    `besselyn` (for now, subject to change).  Thanks to Utkarsh Gautam.

  * Fix: `@sym/dot` consistent with `@double/dot` thanks to Alex Vong.

  * The environment variable `PYTHON` controls which Python executable is
    used.  The command
         `sympref python C:\bin\python`
    has been deprecated; instead please use:
         `setenv PYTHON C:\bin\python`

  * Improve support for Windows.

  * Installation scripts merely warn if Python and SymPy aren't found.



octsympy 2.3.0 (2016-04-08)
===========================

  * New commands:

          airy          chebyshevU      finiteset     rewrite
          besselj       chebyshevT      has           round
          bessely       fix             kron          sort
          besseli       frac            linspace      union
          besselk       intersect       logspace      unique
          besselh       interval        max
          cbrt          ismember        min

  * Bug fix for working with certain unevaluated integrals.

  * Bug fixes for function_handle, fortran and ccode.

  * Bug fixes or improvements to repmat, reshape, python_cmd, factor,