@@ -20,6 +20,7 @@ octsympy 2.4.0-dev
           gammainc
           gammaln
           hypergeom
+          hypot
           igamma
           jordan
           laguerreL
@@ -28,6 +29,7 @@ octsympy 2.4.0-dev
           polylog
           psi
           sech
+          signIm
           sinint
           sinhint
           ssinint
